--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,4 @@ scikit-learn==1.3.0
 selenium==4.10.0
 beautifulsoup4==4.12.2
 youtube-transcript-api==0.6.1
+-e git+https://github.com/ssut/py-hanspell#egg=py-hanspell
